--- a/I-Nex-DBE/.settings
+++ b/I-Nex-DBE/.settings
@@ -4,11 +4,16 @@ Count=0
 [DebugWindow]
 Count=0
 
+[Executable]
+Path="/home/michal/Pulpit/I-Nex-DBE.gambas"
+
 [OpenFile]
-Active=1
+Active=3
 File[1]=".src/FMain.form"
-File[2]=".src/FMain.class:2.13"
-Count=2
+File[2]=".src/FMain.class:40.34"
+Count=4
+File[3]=".src/Form1.form"
+File[4]=".src/Form1.class:23.22"
 
 [Watches]
 Count=0
