--- a/I-Nex-DBE/.settings
+++ b/I-Nex-DBE/.settings
@@ -5,15 +5,15 @@ Count=0
 Count=0
 
 [Executable]
-Path="/home/michal/Pulpit/I-Nex-DBE.gambas"
+Path="/home/michal/I-Nex-DBE-0.0.1/I-Nex-DBE.gambas"
 
 [OpenFile]
 Active=2
 File[1]=".src/FMain.form"
-File[2]=".src/FMain.class:73.19"
+File[2]=".src/FMain.class:13.26"
 Count=4
 File[3]=".src/Form1.form"
-File[4]=".src/Form1.class:23.22"
+File[4]=".src/Form1.class:0.19"
 
 [Watches]
 Count=0
